--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "1. create guarantees, like type annotations, for custom element. like for `HTMLGroupElement`, somehow guarantee that it when `connectedCallback` is called, `this.object` is a javascript object.\r 2. now all thw type branching is done in runtime. I have to add annotations, for strings that are actually image URLs. in the future, type branching can also be done in compile time.",
   "main": "index.js",
   "scripts": {
-    "start": "esbuild src/index.ts --servedir=. --outdir=dist --sourcemap"
+    "start": "esbuild src/index.tsx --servedir=. --outdir=dist --sourcemap --bundle",
+    "tsc": "tsc"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   "homepage": "https://github.com/elybarak/lyr#readme",
   "devDependencies": {
     "esbuild": "^0.12.27",
+    "prettier": "2.4.0",
     "typescript": "^4.4.3"
   }
 }
