--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,6 @@
         "jsx": "preserve",
         "jsxFactory": "h",
         "jsxFragmentFactory": "Fragment",
+        "noImplicitThis": true
     }
 }
